css/src/style.scss
/* ... */
.content-box:hover .glyph-icon {
  margin-top: -10px;
  margin-bottom: 10px;
  opacity: 1;
}

.content-box [class*=" flaticon-"]:before {
  color: #aaa;
  font-size: 80px !important;
  font-style: normal;
  margin-left: 0 !important;
  text-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
  -moz-text-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
  -webkit-text-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
}

.content-box:hover [class*=" flaticon-"]:before {
  color: $color-stt;
  transition: color 0.3s;
  -moz-transition: color 0.3s;
  -webkit-transition: color 0.3s;
  -o-transition: color 0.3s;
}

.page-path {
  color: #cbcbcb !important;
  font-weight: 300;

  a {
    color: $path-link-color !important;
  }
  a:hover {
    color: darken($path-link-color, 20) !important;
  }
}

.left {
  text-align: left;
}
.left img {
  display: block;
  margin-left: 0;
  margin-right: auto;  
}
.center {
  text-align: center;
}
.center img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}
.right {
  text-align: right;
}
.right img {
  display: block;
  margin-left: auto;
  margin-right: 0;
}

.icon {
  margin-bottom: 20px;
}

.extend-full, .extend-left {
  padding-left: 100vw;
  margin-left: -100vw;
}
.extend-full, .extend-right {
  padding-right: 100vw;
  margin-right: -100vw;
}
.extend-full {
  background-size: 100vw;
  background-repeat: no-repeat;
  background-position: center center;
}

img.blog-thumbnail {
  width: 100%;
  height: auto;
}

.image {
  position: relative;
  overflow: hidden;
  padding-bottom: 100%;

  img {
    position: absolute;
    max-width: 100%;
    max-height: 100%;
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
  }
}

.image-text {
  margin-top: 20px;
  height: 60px;

  a, a:hover, a:visited {
    color: #777;
  }
  img {
    float: left;
    margin-right: 7px;
  }
  p {
    font-size: 14px;
    font-weight: 300;
    display: flex;
    align-items: center;
    width: 80px;
    height: 60px;
  }
}

.related-pages p {
  margin: 0
}

[data-toggle="collapse"].collapsed .if-not-collapsed {
  display: none;
}
[data-toggle="collapse"]:not(.collapsed) .if-collapsed {
  display: none;
}

